--- a/01-simple-api/src/main/resources/application.properties
+++ b/01-simple-api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=simple-api
+server.port=8080
+spring.threads.virtual.enabled=true
 server.http2.enabled=true
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=60s
