--- a/02-spring-jpa/pom.xml
+++ b/02-spring-jpa/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>net.bytebuddy</groupId>-->
+<!--            <artifactId>byte-buddy</artifactId>-->
+<!--            <version>1.17.8</version>-->
+<!--        </dependency>-->
 
 	</dependencies>
 
@@ -74,63 +80,128 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.graalvm.buildtools</groupId>
 				<artifactId>native-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>io.github.tiagoiwamoto.springjpa.SpringJpaApplication</mainClass>
+                </configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.hibernate.orm.tooling</groupId>
-                <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                <version>7.0.0.Beta1</version> <!-- compatível com a versão do hibernate escolhida -->
-                <dependencies>
-                    <dependency>
-                        <groupId>net.bytebuddy</groupId>
-                        <artifactId>byte-buddy</artifactId>
-                        <version>1.17.8</version>
-                    </dependency>
-                </dependencies>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>enhance</id>
-                        <phase>process-classes</phase>
-                        <goals><goal>enhance</goal></goals>
+                        <id>process-aot</id>
+                        <goals>
+                            <goal>process-aot</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>io.github.tiagoiwamoto.springjpa.SpringJpaApplication</mainClass>
+                    <jvmArguments>-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/tiagoiwamoto/springjpa</jvmArguments>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skipNativeTests>true</skipNativeTests>
+                            <buildArgs>
+                                <buildArg>--verbose</buildArg>
+                                <buildArg>--initialize-at-run-time=io.netty</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                            </buildArgs>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                                <version>0.2.6</version>
+                                <dependencies>
+                                    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+                                    <dependency>
+                                        <groupId>org.hibernate.orm</groupId>
+                                        <artifactId>hibernate-core</artifactId>
+                                        <version>7.1.4.Final</version>
+                                    </dependency>
+                                </dependencies>
+                            </metadataRepository>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.hibernate.orm.tooling</groupId>
+                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                        <version>7.0.0.Beta1</version>
                         <configuration>
                             <failOnError>true</failOnError>
                             <enableLazyInitialization>true</enableLazyInitialization>
                             <enableDirtyTracking>true</enableDirtyTracking>
                             <enableAssociationManagement>true</enableAssociationManagement>
+                            <enableExtendedEnhancement>false</enableExtendedEnhancement>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-                    <image>
-                        <builder>paketobuildpacks/builder-jammy-buildpackless-tiny</builder><!--required for AArch64/M1 support -->
-                        <buildpacks>
-                            <buildpack>paketobuildpacks/oracle</buildpack>
-                            <buildpack>paketobuildpacks/java-native-image</buildpack>
-                        </buildpacks>
-                    </image>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+                        <dependencies>
+                            <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
+                            <dependency>
+                                <groupId>net.bytebuddy</groupId>
+                                <artifactId>byte-buddy</artifactId>
+                                <version>1.17.8</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>net.bytebuddy</groupId>
+                                <artifactId>byte-buddy-agent</artifactId>
+                                <version>1.17.8</version>
+                            </dependency>
+                        </dependencies>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>enhance</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
